# Fluent-Qt

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.en.md  README.md  README.zh-CN.md  THIRD_PARTY_NOTICES.md  TRADEMARKS.md  resources.qrc  vcpkg.json
.github/integration/: CMakeLists.txt  main.cpp
app/: CMakeLists.txt  GalleryMetadata.cmake  Info.plist.in  app.rc.in  gallery_resources.qrc  main.cpp
app/assets/: Fluent-QT-Gallery.icns  dmg-background.tiff
app/model/: GalleryComponentCatalog.cpp  GalleryComponentCatalog.h  GalleryContentCatalog.cpp  GalleryContentCatalog.h  GalleryNavigationItem.h
app/platform/linux/: app.desktop.in
app/platform/macos/: Info.plist.in
app/platform/windows/: app.rc.in
app/view/: AppIcon.cpp  GalleryNavigationPane.cpp  GalleryNavigationPane.h  GalleryWindow.cpp  GalleryWindow.h  PlaceholderPage.cpp  PlaceholderPage.h  SettingsPage.cpp  SettingsPage.h
app/view/pages/: GalleryCategoryPage.cpp  GalleryCategoryPage.h  GalleryComponentPage.cpp  GalleryComponentPage.h  GalleryContentPage.cpp  GalleryContentPage.h  GalleryFoundationPage.cpp  GalleryFoundationPage.h  GalleryFoundationTopicPage.cpp  GalleryFoundationTopicPage.h  GalleryHomePage.cpp  GalleryHomePage.h  GalleryPageFactory.cpp  GalleryPageFactory.h  PlaceholderPage.cpp  PlaceholderPage.h  SettingsPage.cpp  SettingsPage.h
app/view/shell/: AppIcon.cpp  AppIcon.h  GalleryApplicationController.cpp  GalleryApplicationController.h  GalleryApplicationLifecycle.h  GalleryApplicationRelauncher.cpp  GalleryApplicationRelauncher.h  GalleryCompactFlyout.cpp  GalleryCompactFlyout.h  GalleryContentPresenter.cpp  GalleryContentPresenter.h  GalleryIntroTour.cpp  GalleryIntroTour.h  GalleryNavigationDelegate.cpp  GalleryNavigationDelegate.h  GalleryNavigationMetrics.h  GalleryNavigationPane.cpp  GalleryNavigationPane.h  GalleryPageSkeleton.cpp  GalleryPageSkeleton.h  GallerySearchRanking.h  GallerySingleInstance.cpp  GallerySingleInstance.h  GallerySplashScreen.cpp  GallerySplashScreen.h  GalleryTitleBarController.cpp  GalleryTitleBarController.h  GalleryTopNavigationPane.cpp  GalleryTopNavigationPane.h  GalleryWindow.cpp  GalleryWindow.h  GalleryWindowMetrics.h  GalleryWindowPlacement.cpp  GalleryWindowPlacement.h
app/view/support/: GalleryCloseBehaviorPrompt.cpp  GalleryCloseBehaviorPrompt.h  GalleryCloseBehaviorUi.h  GalleryCodeHighlighter.cpp  GalleryCodeHighlighter.h  GalleryStyleSupport.h  GalleryToast.cpp  GalleryToast.h
app/view/widgets/: AccentColorControl.cpp  AccentColorControl.h  GalleryCodeBlock.cpp  GalleryCodeBlock.h  GalleryComponentReferenceCard.cpp  GalleryComponentReferenceCard.h  GalleryEntryCard.cpp  GalleryEntryCard.h  GalleryEntryGrid.cpp  GalleryEntryGrid.h  GalleryIconBrowser.cpp  GalleryIconBrowser.h  GalleryIconTile.cpp  GalleryIconTile.h  GallerySampleCard.cpp  GallerySampleCard.h  GallerySampleCatalog.cpp  GallerySampleCatalog.h
app/viewmodel/: GalleryNavigationState.cpp  GalleryNavigationState.h  GalleryNavigationViewModel.cpp  GalleryNavigationViewModel.h  GallerySettings.cpp  GallerySettings.h  ThemeCatalog.cpp  ThemeCatalog.h  UpdateChecker.cpp  UpdateChecker.h
examples/hello_world/: CMakeLists.txt  README.md  main.cpp
tests/: CMakeLists.txt  TestHighDpi.cpp  TestProjectLogging.cpp  TestQtTestEnvironment.cpp
tests/components/: CMakeLists.txt  TestAnchorLayout.cpp  TestFluentElement.cpp  TestFoundationContracts.cpp  TestQMLPlus.cpp  TestQtCompat.cpp  TestResourceInitialization.cpp  TestSegoe.cpp  TestTypography.cpp
tests/components/basicinput/: TestButton.cpp  TestCheckBox.cpp  TestColorPicker.cpp  TestComboBox.cpp  TestDropDownButton.cpp  TestHyperlinkButton.cpp  TestRadioButton.cpp  TestRatingControl.cpp  TestRepeatButton.cpp  TestSlider.cpp  TestSplitButton.cpp  TestToggleButton.cpp  TestToggleSplitButton.cpp  TestToggleSwitch.cpp
tests/components/collections/: CMakeLists.txt  FluentGridItemDelegate.cpp  FluentGridItemDelegate.h  FluentListItemDelegate.cpp  FluentListItemDelegate.h  FluentTreeItemDelegate.cpp  FluentTreeItemDelegate.h  TestDrawerView.cpp  TestFlipView.cpp  TestFlowView.cpp  TestGridView.cpp  TestListView.cpp  TestSplitView.cpp  TestStackView.cpp  TestTreeView.cpp
tests/components/date_time/: CMakeLists.txt  TestCalendarDatePicker.cpp  TestCalendarView.cpp  TestDatePicker.cpp  TestTimePicker.cpp
tests/components/dialogs_flyouts/: CMakeLists.txt  TestCoachMark.cpp  TestContentDialog.cpp  TestDialog.cpp  TestFlyout.cpp  TestPopup.cpp  TestTeachingTip.cpp
tests/components/menus_toolbars/: TestMenuBar.cpp
tests/components/navigation/: CMakeLists.txt  TestBreadcrumb.cpp  TestNavigationView.cpp  TestPivot.cpp  TestSelectorBar.cpp  TestTabView.cpp
tests/components/scrolling/: CMakeLists.txt  TestAnnotatedScrollBar.cpp  TestPipsPager.cpp  TestScrollBar.cpp  TestScrollView.cpp
tests/components/status_info/: CMakeLists.txt  TestInfoBadge.cpp  TestInfoBar.cpp  TestProgressBar.cpp  TestProgressRing.cpp  TestToolTip.cpp
tests/components/textfields/: TestAutoSuggestBox.cpp  TestLabel.cpp  TestLineEdit.cpp  TestNumberBox.cpp  TestPasswordBox.cpp  TestTextEdit.cpp
tests/components/windowing/: TestWindow.cpp
tests/gallery/: CMakeLists.txt  GallerySingleInstanceProbe.cpp  TestGalleryContentPages.cpp  TestGalleryShellFramework.cpp  TestGallerySingleInstance.cpp
tests/support/: QtGTestMain.cpp  QtTestEnvironment.cpp  QtTestEnvironment.h  VisualGeometryTestUtils.cpp
tests/views/: CMakeLists.txt  TestAnchorLayout.cpp  TestFluentElement.cpp  TestQMLPlus.cpp  TestQtCompat.cpp  TestSegoe.cpp
tests/views/basicinput/: TestButton.cpp  TestCheckBox.cpp  TestColorPicker.cpp  TestComboBox.cpp  TestDropDownButton.cpp  TestHyperlinkButton.cpp  TestRadioButton.cpp  TestRatingControl.cpp  TestRepeatButton.cpp  TestSlider.cpp  TestSplitButton.cpp  TestToggleButton.cpp  TestToggleSplitButton.cpp  TestToggleSwitch.cpp
tests/views/collections/: FluentGridItemDelegate.cpp  FluentGridItemDelegate.h  FluentListItemDelegate.cpp  FluentListItemDelegate.h  FluentTreeItemDelegate.cpp  (+9 more)
(+660 files in other folders)
